<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg6"
    tools:context=".Dashboard">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg6"
        android:orientation="vertical"
        android:weightSum="10">


        <ImageView
            android:id="@+id/profilepic"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/image"
            android:src="@drawable/pp" />

        <TextView
            android:id="@+id/dashBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="97sp"
            android:layout_marginLeft="97sp"
            android:layout_marginTop="-10sp"
            android:fontFamily="@font/amaranth"
            android:text="@string/my_dashboard"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/occupation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="122sp"
            android:layout_marginLeft="122sp"
            android:fontFamily="@font/amaranth"
            android:text="@string/occupation"
            android:textColor="#F4F4F1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28sp"
            android:layout_marginLeft="28sp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:text="@string/about"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="30dp"
            android:background="#0B0A0A"
            tools:ignore="PrivateResource" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/linearLayout"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>